[package]
name = "search-universe-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"
lapin = "2.1.1"
tokio = "1.26.0"
tokio-amqp = "2.0.0"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde_json = "1.0.94"
serde = "1.0.156"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
elasticsearch = "7.17.7-alpha.1"
