[package]
name = "search-universe-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling - RUST_BACKTRACE=1 and RUST_LIB_BACKTRACE=0 for backtraces in panics only
anyhow = { version = "1.0.69", features = ["backtrace"] }

# RabbitMQ
lapin = "2.1.1"
tokio-executor-trait = "2.1.1"
tokio-amqp = "2.0.0"
tokio-reactor-trait = "1.1.0"

# Async
tokio = { version = "1.26.0", features = ["full"] }
futures-lite = "1.12.0"

# Ser/deserialisation
serde_json = "1.0.94"
serde = "1.0.156"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

# Elasticsearch
elasticsearch = "7.17.7-alpha.1"
